Made changes to React app

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -20,6 +20,6 @@
     "imageSrc": "projects/project.png",
     "description": "Empowering a seamless shopping experience through a cutting-edge e-commerce platform built with modern web development technologies.",
     "skills": ["React", "Javascript", "CSS"],
-    "demo": "https://flipzonn.netlify.app/",
+    "demo": "https://flipzonn.netlify.app/"
   }
 ]
